--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ document.getElementsByClassName("status-offline")[b].style.display="inline-block
 </div>
 
 <div class="cell cell-sm-5 cell-md-5 cell-lg-5">
-<img src="https://amdouglas.com/assets/gif/loader.gif" id="amd" alt="Loader" onload="site_online(this.id,0);" onerror="site_offline(this.id,0);">
+<img src="https://amdouglas.com/assets/gif/iWrVv3m.gif" id="amd" alt="Loader" onload="site_online(this.id,0);" onerror="site_offline(this.id,0);">
 <span class="status-online"></span>
 <span class="status-offline"></span>
 </div><div class="cell cell-sm-12 cell-md-12 cell-lg-12"><hr></div></div>
@@ -44,7 +44,7 @@ document.getElementsByClassName("status-offline")[b].style.display="inline-block
 </div>
 
 <div class="cell cell-sm-5 cell-md-5 cell-lg-5">
-<img src="https://amdouglas.com/assets/gif/loader.gif" id="ijd" alt="Loader" onload="site_online(this.id,1);" onerror="site_offline(this.id,1);">
+<img src="https://amdouglas.com/assets/gif/iWrVv3m.gif" id="ijd" alt="Loader" onload="site_online(this.id,1);" onerror="site_offline(this.id,1);">
 <span class="status-online"></span>
 <span class="status-offline"></span>
 </div><div class="cell cell-sm-12 cell-md-12 cell-lg-12"><hr></div></div>
@@ -54,7 +54,7 @@ document.getElementsByClassName("status-offline")[b].style.display="inline-block
   <h2><span class="item-title">robomonkey.org</span></h2></div>
 
 <div class="cell cell-sm-5 cell-md-5 cell-lg-5">
-<img src="https://amdouglas.com/assets/gif/loader.gif" id="hil" alt="Loader" onload="site_online(this.id,2);" onerror="site_offline(this.id,2);">
+<img src="https://amdouglas.com/assets/gif/iWrVv3m.gif" id="hil" alt="Loader" onload="site_online(this.id,2);" onerror="site_offline(this.id,2);">
 <span class="status-online"></span>
 <span class="status-offline"></span>
 </div><div class="cell cell-sm-12 cell-md-12 cell-lg-12"><hr></div></div>
@@ -64,7 +64,7 @@ document.getElementsByClassName("status-offline")[b].style.display="inline-block
 <h2><span class="item-title">hil.org.uk</span></h2></div>
 
 <div class="cell cell-sm-5 cell-md-5 cell-lg-5">
-<img src="https://amdouglas.com/assets/gif/loader.gif" id="rob" alt="Loader" onload="site_online(this.id,3);" onerror="site_offline(this.id,3);">
+<img src="https://amdouglas.com/assets/gif/iWrVv3m.gif" id="rob" alt="Loader" onload="site_online(this.id,3);" onerror="site_offline(this.id,3);">
 <span class="status-online"></span>
 <span class="status-offline"></span>
 </div></div>
