--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ document.getElementsByClassName("status-offline")[b].style.display="inline-block
   <h2><span class="item-title">robomonkey.org</span></h2></div>
 
 <div class="cell cell-sm-5 cell-md-5 cell-lg-5">
-<img src="https://amdouglas.com/assets/gif/iWrVv3m.gif" id="hil" alt="Loader" onload="site_online(this.id,2);" onerror="site_offline(this.id,2);">
+<img src="http://robomonkey.org/uploads/logo.png" id="hil" alt="Loader" onload="site_online(this.id,2);" onerror="site_offline(this.id,2);">
 <span class="status-online"></span>
 <span class="status-offline"></span>
 </div><div class="cell cell-sm-12 cell-md-12 cell-lg-12"><hr></div></div>
