--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ document.getElementsByClassName("status-offline")[b].style.display="inline-block
 </div>
 
 <div class="cell cell-sm-5 cell-md-5 cell-lg-5">
-<img src="https://amdouglas.com/assets/gif/iWrVv3m.gif" id="ijd" alt="Loader" onload="site_online(this.id,1);" onerror="site_offline(this.id,1);">
+<img src="https://indredouglas.me/assets/img/iWrVv3m.gif" id="ijd" alt="Loader" onload="site_online(this.id,1);" onerror="site_offline(this.id,1);">
 <span class="status-online"></span>
 <span class="status-offline"></span>
 </div><div class="cell cell-sm-12 cell-md-12 cell-lg-12"><hr></div></div>
