--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,shrink-to-fit=no">
     <title>Status &middot; A. M. Douglas</title>
     <link rel="icon" href="https://cdn.rawgit.com/wnda/amd-morag/master/assets/img/favicon.ico">
     <style>
@@ -105,7 +105,7 @@
             }
         }
         
-        @keyframes pulse
+      @keyframes pulse
         {
           0%
             {
