--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     @charset "UTF-8";
     :root,html{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;font-size:100%;line-height:1.27;font-family:Roboto,Helmet,Freesans,sans-serif;overflow-y:auto;overflow-x:hidden;background:hsl(0,0%,100%);color:hsl(240,60%,6.9%);text-rendering:optimizeSpeed;-webkit-text-size-adjust:100%;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;*zoom:1}
       
-    *,:before,:after{box-sizing:inherit;margin:0;padding:0;border:0;vertical-align:baseline;font-size:100%;line-height:1.27;font-family:Roboto,Helmet,Freesans,sans-serif;box-shadow:none;outline:0 none;text-decoration:none;-webkit-tap-highlight-color:transparent}
+    *,:before,:after{box-sizing:inherit;margin:0;padding:0;border:0;vertical-align:baseline;font-size:100%;line-height:1.27;font-family:inherit;box-shadow:none;outline:0 none;text-decoration:none;-webkit-tap-highlight-color:transparent}
       
       details,main,summary{display:block}
       a{color:inherit;cursor:pointer;text-decoration:none;width:100%}
