--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 startTimer();
             }, thisDelay);
         }
+        startTimer();
       }());
       function site_online(a,b){
         var x=document.getElementById(a),
