--- a/index.html
+++ b/index.html
@@ -35,16 +35,15 @@
       (function(){
         var myDelay=1000,
             thisDelay=1000,
-            start=Date.now();
+            start=Date.now(),
+            counter=0;
         function startTimer() {    
-            setTimeout(function() {
+            setTimeout(function(counter) {
               var a=document.getElementsByClassName("latency"),
-                  b=a.length,
-                  counter=0;
+                  b=a.length;
+                counter++;
                 while(b--){
                   a[b].textContent=counter;
-                  console.warn(counter);
-                  counter++;
                 }
                 // calculate the actual number of ms since last time
                 var actual = Date.now() - start;
