--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             start=Date.now();
         function startTimer() {
           var counter=0;
-            setTimeout(function(counter) {
+            setTimeout(function() {
               var a=document.getElementsByClassName("latency"),
                   b=a.length;
                 counter++;
