--- a/index.html
+++ b/index.html
@@ -32,19 +32,18 @@
        @charset "UTF-8";@font-face{font-family:'SofiaPro';font-display:fallback;font-weight:400;font-style:normal;font-variant:normal;src:url("https://wnda.github.io/picuse-concept/SofiaProRegular.woff") format("woff")}@font-face{font-family:'SofiaPro';font-display:fallback;font-weight:700;font-style:normal;font-variant:normal;src:url("https://wnda.github.io/picuse-concept/SofiaProBold.woff") format("woff")}html,body,:root{font-family:'SofiaPro',Roboto,-apple-system,sans-serif}
     </style>
     <script>
-      (function(){
-        var counter=0;
-        function startTimer(){
-            setTimeout(function(){
-              var a=document.getElementsByClassName("latency"),
-                  b=a.length;
-                counter++;
-                while(b--){a[b].textContent=counter;}
-                startTimer();
-            },1);
-        }
-        startTimer();
-      }());
+      var counter=0;
+      function startTimer(){
+        var timer=setTimeout(function(){
+          var a=document.getElementsByClassName("latency"),
+              b=a.length;
+            counter++;
+            while(b--){a[b].textContent=counter;}
+            startTimer();
+        },1);
+      }
+      startTimer();
+      
       function site_online(a,b){
         var x=document.getElementById(a),
             now=new Date().getTime(),
@@ -55,6 +54,7 @@
         document.getElementsByClassName("latency")[b].textContent="Network latency: "+page_load_time+"ms";
         document.getElementsByClassName("status-online")[b].style.display="inline-block";
         document.getElementsByClassName("message")[b].textContent="The website is online. Server is fully operational.";
+        clearTimeout(timer);
       }
       function site_offline(a,b){
         var x=document.getElementById(a);
@@ -63,6 +63,7 @@
         x.style.display="none";
         document.getElementsByClassName("status-offline")[b].style.display="inline-block";
         document.getElementsByClassName("message")[b].textContent="The website is offline. Server is down for urgent maintenance.";
+        clearTimeout(timer);
       }
     </script>
     <main class="page">
