--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
   </head>
   <body>
     <style scoped>
-       @charset "UTF-8";@font-face{font-family:'SofiaPro';font-display:fallback;font-weight:400;font-style:normal;font-variant:normal;src:url("https://wnda.github.io/picuse-concept/SofiaProRegular.woff") format("woff")}@font-face{font-family:'SofiaPro';font-display:fallback;font-weight:700;font-style:normal;font-variant:normal;src:url("https://wnda.github.io/picuse-concept/SofiaProBold.woff") format("woff")}html,body,:root{font-family:'SofiaPro',Roboto,-apple-system,sans-serif}
+      @charset "UTF-8";
+      @font-face{font-family:"FaktPro";src:url(https://dl.dropboxusercontent.com/u/32029178/FontCSS/FaktPro-Thin_gdi.woff) format('woff');font-weight:300}
+      @font-face{font-family:"FaktPro";src:url(https://dl.dropboxusercontent.com/u/32029178/FontCSS/FaktPro-Blond_gdi.woff) format('woff');font-weight:400}
+      @font-face{font-family:"FaktPro";src:url(https://dl.dropboxusercontent.com/u/32029178/FontCSS/FaktPro-SemiBold_gdi.woff) format('woff');font-weight:700}
+      html,body,:root{font-family:'FaktPro',Roboto,-apple-system,sans-serif}
     </style>
     <script>
     (function(){
