--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       html,body,:root{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;font-size:100%;line-height:1.27;font-family:Roboto,Helmet,Freesans,sans-serif;overflow-x:hidden;background:hsl(0,0%,100%);color:hsl(240,60%,6.9%);text-rendering:optimizeSpeed;-webkit-text-size-adjust:100%;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;*zoom:1}
       *,:before,:after{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;margin:0;padding:0;border:0;vertical-align:baseline;-webkit-tap-highlight-color:transparent}
       details,main,summary{display:block}
+      body{padding:8px;padding:.5rem}
       a{color:inherit;cursor:pointer;text-decoration:none;display:block}
       textarea{resize:vertical}
       form,legend,button,input,textarea{-webkit-appearance:none;-moz-appearance:none;-ms-appearance:none;-o-appearance:none;appearance:none;-webkit-border-radius:0}
