--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="https://cdn.rawgit.com/wnda/pivot/master/favicon.ico">
     <style>
     @charset "UTF-8";
-      html,body,:root{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;font-size:100%;line-height:1.27;font-family:Roboto,Helmet,Freesans,sans-serif;overflow-x:hidden;background:hsl(0,0%,100%);color:hsl(240,60%,6.9%);text-rendering:optimizeSpeed;-webkit-text-size-adjust:100%;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;*zoom:1}
+      html,body,:root{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;font-size:100%;line-height:1.27;font-family:"GTW",Roboto,Helmet,Freesans,sans-serif;overflow-x:hidden;background:hsl(0,0%,100%);color:hsl(240,60%,6.9%);text-rendering:optimizeSpeed;-webkit-text-size-adjust:100%;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;*zoom:1}
       *,:before,:after{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;margin:0;padding:0;border:0;vertical-align:baseline;-webkit-tap-highlight-color:transparent}
       details,main,summary{display:block}
       body{padding:8px;padding:.5rem}
@@ -31,10 +31,9 @@
   <body>
     <style scoped>
       @charset "UTF-8";
-      @font-face{font-family:"FaktPro";src:url(https://dl.dropboxusercontent.com/u/32029178/FontCSS/FaktPro-Thin_gdi.woff) format('woff');font-weight:300}
-      @font-face{font-family:"FaktPro";src:url(https://dl.dropboxusercontent.com/u/32029178/FontCSS/FaktPro-Blond_gdi.woff) format('woff');font-weight:400}
-      @font-face{font-family:"FaktPro";src:url(https://dl.dropboxusercontent.com/u/32029178/FontCSS/FaktPro-SemiBold_gdi.woff) format('woff');font-weight:700}
-      html,body,:root{font-family:'FaktPro',Roboto,-apple-system,sans-serif}
+      @font-face{font-family:"GTW";src:url(https://cdn.rawgit.com/wnda/morrigan/master/assets/fonts/gt-walsheim-regular.woff) format('woff');font-weight:400}
+      @font-face{font-family:"GTW";src:url(https://cdn.rawgit.com/wnda/morrigan/master/assets/fonts/gt-walsheim-bold.woff) format('woff');font-weight:700}
+      html,body,:root{font-family:"GTW",Roboto,-apple-system,sans-serif}
     </style>
     <script>
     //(function(){var counter=0,timer;function startTimer(){timer=setTimeout(function(){var a=document.getElementsByClassName("latency"),b=a.length;counter++;while(b--){a[b].textContent=counter;}startTimer();},1);}startTimer();
