--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       html,body,:root{font-family:"GTW",Roboto,-apple-system,sans-serif}
     </style>
     <script>
-    (function(){var counter=0,timer;function startTimer(){timer=setTimeout(function(){var a=document.getElementsByClassName("latency"),b=a.length;counter++;while(b--){a[b].textContent=counter;}startTimer();},1);}startTimer();
+    (function(){var counter=0,timer;function startTimer(){timer=setTimeout(function(){var a=document.getElementsByClassName("latency"),b=a.length;counter++;while(b--){a[b].textContent=counter;}startTimer();window.timer=timer;},1);}startTimer();
       
       function site_online(a,b){
         var x=document.getElementById(a),
