--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </style>
     <script>
     (function(){
+      "use strict";
       function site_online(a,b){
         var x=document.getElementById(a),
             now=new Date().getTime(),
