--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
     <script>
     (function(){
       "use strict";
-      var requestAnimationFrame = window.requestAnimationFrame || window.mozRequestAnimationFrame ||
-                            window.webkitRequestAnimationFrame || window.msRequestAnimationFrame,
-          cancelAnimationFrame = window.cancelAnimationFrame || window.mozCancelAnimationFrame;
+      var requestAnimationFrame = window.requestAnimationFrame||window.mozRequestAnimationFrame||window.webkitRequestAnimationFrame || window.msRequestAnimationFrame,
+          cancelAnimationFrame  = window.cancelAnimationFrame||window.mozCancelAnimationFrame;
       
       var start = Date.now();
       var myReq;
@@ -50,8 +49,7 @@
       
       function step(timestamp) {
         var progress = timestamp - start;
-        counter+=progress;
-        for(;b>z;z++){a[z].textContent=counter;}
+        for(;b>z;z++){a[z].textContent=progress;}
         if (progress < 2000) {
           myReq = requestAnimationFrame(step);
         }
