--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
     </style>
   </head>
   <body>
-    <style scoped>
-      @font-face{font-family:'SofiaPro';font-display:fallback;font-style:normal;font-weight:700;src:url(https://amdouglas.com/assets/fonts/SofiaProBold.woff2) format('woff2'),url(https://amdouglas.com/assets/fonts/SofiaProBold.woff) format('woff')}html,body,:root{font-family:'SofiaPro',-apple-system,Roboto,Arial,Helmet,Freesans,sans-serif}
-    </style>
+    <!--/*--><![CDATA[/*><!--*/
+    @font-face{font-family:"SofiaPro";src:url(https://cdn.rawgit.com/wnda/morrigan/master/assets/fonts/SofiaProLight.woff2) format('woff2'),url(https://cdn.rawgit.com/wnda/morrigan/master/assets/fonts/SofiaProLight.woff) format('woff');font-weight:400;font-style:normal;font-variant:normal;font-display:fallback}
+    @font-face{font-family:"SofiaPro";src:url(https://cdn.rawgit.com/wnda/morrigan/master/assets/fonts/SofiaProBold.woff2) format('woff2'),url(https://cdn.rawgit.com/wnda/morrigan/master/assets/fonts/SofiaProBold.woff) format('woff');font-weight:700;font-style:normal;font-variant:normal;font-display:fallback}
+    html,body,*,:before,:after{font-family:"SofiaPro",Roboto,-apple-system,sans-serif}
+    /*]]>*/-->
     <script>
     (function(){
       "use strict";
