--- a/index.html
+++ b/index.html
@@ -166,13 +166,10 @@
             stat_offs[b].style.display="inline-block";
             msgs[b].textContent="The website is offline. Server is down for urgent maintenance.";
           },
-          strEvent  = function( etype ){
-                        return ( 'addEventListener' in window ) ?
-                              etype :
-                                'on'+etype;
-                      };
+          strEvent  = function(etype){return (('addEventListener'in window)?etype:'on'+etype)};
               
-      while(i--){
+      while(i--)
+      {
         imgs[i] [listenFor] ( strEvent( 'load' ) , siteOnline( imgs[i].id, i ) );
         imgs[i] [listenFor] ( strEvent( 'error' ) , siteOffline( imgs[i].id, i ) );
         imgs[i].src = imgs[i].getAttribute( 'data-src' );
