--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             stat_offs[b].style.display="inline-block";
             msgs[b].textContent="The website is offline. Server is down for urgent maintenance.";
           },
-          strEvent  = function(etype){return (('addEventListener'in window)?etype:'on'+etype)};
+          strEvent  = function(etype){return (('addEventListener'in window)?etype:'on'+etype);};
               
       while(i--)
       {
