--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,shrink-to-fit=no">
-    <title>A. M. Douglas &middot; Status</title>
+    <title>Status &middot; A. M. Douglas</title>
     <meta name="description" content="Status checker for websites maintained by A. M. Douglas">
     <link rel="icon" href="https://cdn.rawgit.com/wnda/pivot/master/favicon.ico">
     <style>
